[package]
name = "azimuthal_fdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdf5 = "0.8"
ndarray = "0.15"
rayon = "1.6"
num_cpus = "1.15"
clap = { version = "4.1", features = ["derive"] }
